--- a/index.html
+++ b/index.html
@@ -4,119 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yupifiestas - Alquiler de Castillos Hinchables</title>
-    <style>
-        body {
-            background-color: #6a0dad;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: white;
-            text-align: center;
-        }
-        .header {
-            padding: 20px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .logo {
-            width: 200px;
-            margin-bottom: 20px;
-        }
-        .hero {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 20px;
-        }
-        .image-container {
-            width: 300px;
-            height: 200px;
-            margin: 10px;
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            transition: transform 0.3s ease-in-out;
-        }
-        .image-container:hover {
-            transform: scale(1.1);
-        }
-        .image-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .packs {
-            margin-top: 40px;
-            padding: 20px;
-        }
-        .pack {
-            background-color: #8a2be2;
-            margin: 10px;
-            padding: 15px;
-            border-radius: 10px;
-            display: inline-block;
-            width: 250px;
-        }
-        .pack img {
-            width: 100%;
-            height: 150px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-        .footer {
-            margin-top: 50px;
-            padding: 20px;
-            background-color: #4a0080;
-            color: white;
-            text-align: center;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-    <div class="header">
-        <img src="/mnt/data/logoyupi.jpg" alt="Yupifiestas Logo" class="logo">
-        <div>Yupifiestas - Alquiler de Castillos Hinchables</div>
+
+    <!-- Encabezado -->
+    <header>
+        <div class="container-header">
+            <div class="logo-title">
+                <img src="/mnt/data/image.png" alt="Logo">
+                <h4>Yupifiestas</h4>
+            </div>
+            <label class="icon-menu">☰ Menú</label>
+        </div>
+    </header>
+    
+    <!-- Portada con Video de Fondo -->
+<div class="container-portada">
+    <video autoplay muted loop class="video-background">
+        <source src="assets/img/castillos/20250316_2343_Inflatable_Adventure_Fun.mp4" type="video/mp4">
+        Tu navegador no soporta la reproducción de videos.
+    </video>
+    <div class="capa-gradient"></div>
+    <div class="container-details">
+        <h1>Yupifiestas</h1>
+        <p>Alquiler de Castillos Hinchables para cualquier tipo de evento.</p>
+        <button>Ver más detalles</button>
     </div>
+</div>
+
+    <!-- Sección de Castillos Hinchables -->
     <div class="hero">
-        <div class="image-container">
-            <img src="castillo1.jpg" alt="Castillo Hinchable 1">
+        <div class="image-container"><img src="castillo1.jpg" alt="Castillo 1"></div>
+        <div class="image-container"><img src="castillo2.jpg" alt="Castillo 2"></div>
+        <div class="image-container"><img src="castillo3.jpg" alt="Castillo 3"></div>
+        <div class="image-container"><img src="castillo4.jpg" alt="Castillo 4"></div>
+        <div class="image-container"><img src="castillo5.jpg" alt="Castillo 5"></div>
+        <div class="image-container"><img src="castillo6.jpg" alt="Castillo 6"></div>
+        <div class="image-container"><img src="castillo5.jpg" alt="Castillo 5"></div>
+        <div class="image-container"><img src="castillo6.jpg" alt="Castillo 6"></div>
+    </div>
+
+    <!-- Sección de Packs Mejorada -->
+<div class="packs">
+    <h2>Nuestros Packs</h2>
+    <div class="packs-container">
+        <div class="pack">
+            <img src="assets/img/castillos/cumpleanos.jpg" alt="Cumpleaños">
+            <p>🎉 Cumpleaños</p>
         </div>
-        <div class="image-container">
-            <img src="castillo2.jpg" alt="Castillo Hinchable 2">
+        <div class="pack">
+            <img src="assets/img/castillos/despedida.jpg" alt="Despedidas">
+            <p>🎭 Despedidas</p>
         </div>
-        <div class="image-container">
-            <img src="castillo3.jpg" alt="Castillo Hinchable 3">
+        <div class="pack">
+            <img src="assets/img/castillos/fiestas.jpg" alt="Fiestas">
+            <p>🎪 Fiestas</p>
         </div>
-        <div class="image-container">
-            <img src="castillo4.jpg" alt="Castillo Hinchable 4">
-        </div>
-        <div class="image-container">
-            <img src="castillo5.jpg" alt="Castillo Hinchable 5">
-        </div>
-        <div class="image-container">
-            <img src="castillo6.jpg" alt="Castillo Hinchable 6">
+        <div class="pack">
+            <img src="assets/img/castillos/eventos.jpg" alt="Eventos">
+            <p>🎈 Eventos</p>
         </div>
     </div>
-    <div class="packs">
-        <div class="pack">
-            <img src="cumpleanos.jpg" alt="Cumpleaños">
-            🎉 Cumpleaños
-        </div>
-        <div class="pack">
-            <img src="despedida.jpg" alt="Despedidas de Soltero/a">
-            🎭 Despedidas de Soltero/a
-        </div>
-        <div class="pack">
-            <img src="fiestas.jpg" alt="Fiestas Genéricas">
-            🎪 Fiestas Genéricas
-        </div>
-        <div class="pack">
-            <img src="eventos.jpg" alt="Eventos Especiales">
-            🎈 Eventos Especiales
+</div>
+
+
+    <!-- Sección de Promoción Mejorada -->
+<section class="promotionWrapper">
+    <div class="container">
+        <div class="promotionInfo">
+            <h2>¿Necesitas más información?</h2>
+            <p>Consulta todos nuestros precios y ofertas exclusivas para eventos.</p>
+            <a href="contacto" class="btn btn-primary">
+                <i class="fa fa-phone" aria-hidden="true"></i> Contáctenos
+            </a>
         </div>
     </div>
-    <div class="footer">
-        &copy; 2025 Yupifiestas - Todos los derechos reservados | Contacto: info@yupifiestas.es
-    </div>
+</section>
+
+
+    <!-- Pie de Página Animado -->
+    <footer class="footer">
+        <div class="footer-container">
+            <!-- Información de contacto -->
+            <div class="footer-info">
+                <h3>Yupifiestas</h3>
+                <p>Alquiler de castillos hinchables para cualquier tipo de evento.</p>
+                <p>📍 Ubicación: Ciudad, País</p>
+                <p>📧 Correo: <a href="mailto:info@yupifiestas.es">info@yupifiestas.es</a></p>
+                <p>📞 Teléfono: <a href="tel:+123456789">+12 345 6789</a></p>
+            </div>
+
+            <!-- Redes Sociales -->
+            <div class="footer-social">
+                <h3>Síguenos</h3>
+                <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-youtube"></i></a>
+            </div>
+
+            <!-- Menú rápido -->
+            <div class="footer-links">
+                <h3>Menú</h3>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Reservas</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Animación de olas -->
+        <div class="waves"></div>
+
+        <!-- Derechos Reservados -->
+        <div class="footer-bottom">
+            &copy; 2025 Yupifiestas - Todos los derechos reservados
+        </div>
+    </footer>
+
+    <!-- GSAP para efecto Parallax -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
+    <script>
+        gsap.to(".container-portada", {
+            backgroundPositionY: "50%",
+            ease: "none",
+            scrollTrigger: {
+                trigger: ".container-portada",
+                start: "top top",
+                end: "bottom top",
+                scrub: true
+            }
+        });
+    </script>
+
 </body>
 </html>
