--- a/prueva1.html
+++ b/prueva1.html
@@ -5,191 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yupifiestas - Alquiler de Castillos Hinchables</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
-    
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Raleway', sans-serif;
-        }
-
-        /* Encabezado */
-        header {
-            width: 100%;
-            height: 60px;
-            background: black;
-        }
-
-        .container-header {
-            width: 100%;
-            max-width: 1200px;
-            position: relative;
-            margin: auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px;
-        }
-
-        .logo-title {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo-title img {
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
-
-        .logo-title h4 {
-            color: white;
-            font-weight: 300;
-        }
-
-        .icon-menu {
-            color: white;
-            font-size: 28px;
-            border: 1px solid rgba(255, 255, 255, 0.4);
-            padding: 5px 10px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        .icon-menu:hover {
-            background: rgba(255, 255, 255, 0.4);
-        }
-
-        /* Portada con imagen de fondo y Parallax */
-        .container-portada {
-            width: 100%;
-            height: 100vh;
-            position: relative;
-            background: url('/mnt/data/image.png') no-repeat center center/cover;
-        }
-
-        .capa-gradient {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
-        }
-
-        .container-details {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            color: white;
-            text-align: center;
-        }
-
-        .container-details h1 {
-            font-size: 50px;
-            font-weight: bold;
-            text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
-        }
-
-        .container-details p {
-            font-size: 20px;
-            max-width: 700px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
-        }
-
-        .container-details button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
-            background: #ffcc00;
-            color: black;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-
-        .container-details button:hover {
-            background: #e6b800;
-        }
-
-        /* Sección de Castillos y Eventos */
-        .hero {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 50px 20px;
-            background: white;
-            color: black;
-        }
-
-        .image-container {
-            width: 300px;
-            height: 200px;
-            margin: 10px;
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .image-container:hover {
-            transform: scale(1.1);
-        }
-
-        .image-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        /* Sección de packs */
-        .packs {
-            margin-top: 40px;
-            padding: 50px 20px;
-            background: #f8f8f8;
-            text-align: center;
-        }
-
-        .pack {
-            background-color: #8a2be2;
-            margin: 10px;
-            padding: 15px;
-            border-radius: 10px;
-            display: inline-block;
-            width: 250px;
-            color: white;
-            font-size: 18px;
-            text-align: center;
-        }
-
-        .pack img {
-            width: 100%;
-            height: 150px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-
-        /* Pie de Página */
-        .footer {
-            margin-top: 50px;
-            padding: 20px;
-            background-color: #4a0080;
-            color: white;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="prueva1.css"> 
 </head>
 <body>
 
+    <!-- Encabezado -->
     <header>
         <div class="container-header">
             <div class="logo-title">
-                <img src="/mnt/data/image.png" alt="Logo">
+                <img src="/mnt/data/logoyupi.jpg" alt="Logo">
                 <h4>Yupifiestas</h4>
             </div>
             <label class="icon-menu">☰ Menú</label>
@@ -206,7 +30,7 @@
         </div>
     </div>
 
-    <!-- Sección de castillos hinchables -->
+    <!-- Sección de Castillos Hinchables -->
     <div class="hero">
         <div class="image-container"><img src="castillo1.jpg" alt="Castillo 1"></div>
         <div class="image-container"><img src="castillo2.jpg" alt="Castillo 2"></div>
@@ -216,90 +40,80 @@
         <div class="image-container"><img src="castillo6.jpg" alt="Castillo 6"></div>
     </div>
 
-    <!-- Sección de Packs -->
-<div class="packs" style="text-align: center; margin: 50px 0;">
-    <h2 style="font-size: 28px; margin-bottom: 20px; color: white;">Nuestros Packs</h2>
-    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
-        <div class="pack" style="background-color: #8a2be2; padding: 15px; border-radius: 10px; text-align: center; width: 250px;">
-            <img src="assets/img/castillos/cumpleanos.jpg" alt="Cumpleaños" style="width: 100%; height: 150px; border-radius: 10px; object-fit: cover;">
-            <p style="margin-top: 10px;">🎉 Cumpleaños</p>
-        </div>
-        <div class="pack" style="background-color: #8a2be2; padding: 15px; border-radius: 10px; text-align: center; width: 250px;">
-            <img src="assets/img/castillos/despedida.jpg" alt="Despedidas" style="width: 100%; height: 150px; border-radius: 10px; object-fit: cover;">
-            <p style="margin-top: 10px;">🎭 Despedidas</p>
-        </div>
-        <div class="pack" style="background-color: #8a2be2; padding: 15px; border-radius: 10px; text-align: center; width: 250px;">
-            <img src="assets/img/castillos/fiestas.jpg" alt="Fiestas" style="width: 100%; height: 150px; border-radius: 10px; object-fit: cover;">
-            <p style="margin-top: 10px;">🎪 Fiestas</p>
-        </div>
-        <div class="pack" style="background-color: #8a2be2; padding: 15px; border-radius: 10px; text-align: center; width: 250px;">
-            <img src="assets/img/castillos/eventos.jpg" alt="Eventos" style="width: 100%; height: 150px; border-radius: 10px; object-fit: cover;">
-            <p style="margin-top: 10px;">🎈 Eventos</p>
-        </div>
-    </div>
-</div>
-
-<!-- Sección de Promoción -->
-<section class="promotionWrapper" style="background-image: url('assets/img/castillos/patrulla.jpg'); background-size: cover; background-position: center; padding: 50px 20px; text-align: center; color: white;">
-    <div class="container">
-        <div class="promotionInfo">
-            <h2 style="font-size: 32px; margin-bottom: 10px;">¿Necesitas más información?</h2>
-            <p style="font-size: 18px; margin-bottom: 20px;">Infórmate y conoce todos nuestros precios y ofertas</p>
-            <a href="contacto" class="btn btn-primary" title="Contacta con Castillos Hinchables Fantasia" 
-                style="display: inline-block; padding: 12px 20px; font-size: 18px; background-color: #ffcc00; color: black; text-decoration: none; border-radius: 5px; font-weight: bold;">
-                <i class="fa fa-phone" aria-hidden="true"></i> Contáctenos
-            </a>
-        </div>
-    </div>
-</section>
-
-      
-
-<footer class="footer">
-    <div class="footer-container">
-        <!-- Columna de Información -->
-        <div class="footer-info">
-            <h3>Yupifiestas</h3>
-            <p>Alquiler de castillos hinchables para cualquier tipo de evento.</p>
-            <p>📍 Ubicación: Ciudad, País</p>
-            <p>📧 Correo: <a href="mailto:info@yupifiestas.es">info@yupifiestas.es</a></p>
-            <p>📞 Teléfono: <a href="tel:+123456789">+12 345 6789</a></p>
-        </div>
-
-        <!-- Columna de Redes Sociales -->
-        <div class="footer-social">
-            <h3>Síguenos</h3>
-            <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="social-icon"><i class="fa fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fa fa-youtube"></i></a>
-        </div>
-
-        <!-- Columna de Menú Rápido -->
-        <div class="footer-links">
-            <h3>Menú</h3>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Reservas</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
+    <!-- Packs de Eventos -->
+    <div class="packs">
+        <h2>Nuestros Packs</h2>
+        <div class="packs-container">
+            <div class="pack">
+                <img src="assets/img/castillos/cumpleanos.jpg" alt="Cumpleaños">
+                <p>🎉 Cumpleaños</p>
+            </div>
+            <div class="pack">
+                <img src="assets/img/castillos/despedida.jpg" alt="Despedidas">
+                <p>🎭 Despedidas</p>
+            </div>
+            <div class="pack">
+                <img src="assets/img/castillos/fiestas.jpg" alt="Fiestas">
+                <p>🎪 Fiestas</p>
+            </div>
+            <div class="pack">
+                <img src="assets/img/castillos/eventos.jpg" alt="Eventos">
+                <p>🎈 Eventos</p>
+            </div>
         </div>
     </div>
 
-    <!-- Animación de olas -->
-    <div class="waves"></div>
+    <!-- Sección con Video de Fondo -->
+    <section class="promotionWrapper">
+        <video autoplay muted loop class="video-background">
+            <source src="assets/img/castillos/video_castillo1.mp4" type="video/mp4">
+            Tu navegador no soporta la reproducción de videos.
+        </video>
+        <div class="capa-gradient"></div>
+        <div class="container">
+            <div class="promotionInfo">
+                <h2>¿Necesitas más información?</h2>
+                <p>Consulta todos nuestros precios y ofertas exclusivas para eventos.</p>
+                <a href="contacto" class="btn btn-primary">Contáctenos</a>
+            </div>
+        </div>
+    </section>
 
-    <!-- Derechos Reservados -->
-    <div class="footer-bottom">
-        &copy; 2025 Yupifiestas - Todos los derechos reservados
-    </div>
-</footer>
+    <!-- Pie de Página Animado -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-info">
+                <h3>Yupifiestas</h3>
+                <p>Alquiler de castillos hinchables para cualquier tipo de evento.</p>
+                <p>📍 Ubicación: Ciudad, País</p>
+                <p>📧 Correo: <a href="mailto:info@yupifiestas.es">info@yupifiestas.es</a></p>
+                <p>📞 Teléfono: <a href="tel:+123456789">+12 345 6789</a></p>
+            </div>
+            <div class="footer-social">
+                <h3>Síguenos</h3>
+                <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fa fa-youtube"></i></a>
+            </div>
+            <div class="footer-links">
+                <h3>Menú</h3>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Reservas</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="waves"></div>
+        <div class="footer-bottom">
+            &copy; 2025 Yupifiestas - Todos los derechos reservados
+        </div>
+    </footer>
 
-    <!-- GSAP para efecto Parallax -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-
     <script>
         gsap.to(".container-portada", {
             backgroundPositionY: "50%",
