--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li><a href="#castillos">Castillos</a></li>
                     <li><a href="#packs">Packs</a></li>
                     <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="assets/html/blog.html">Blog</a></li>
                 </ul>
             </nav>
         </div>
@@ -78,82 +79,82 @@
         <div class="packs-container">
 
             <!-- 🎉 Cumpleaños -->
-            <a href="mnt/html/event_cumpleaños.html">
+            <a href="assets/html/event_cumpleaños.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/cumpleaños.mp4" type="video/mp4">
                     </video>
-                    <p>🎉 Cumpleaños</p>
+                    <button>🎉 Cumpleaños</button>
                 </div>
             </a>
 
             <!-- 🎭 Despedidas -->
-            <a href="mnt/html/event_despedidas.html">
+            <a href="assets/html/event_despedidas.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/despedidas.mp4" type="video/mp4">
                     </video>
-                    <p>🎭 Despedidas</p>
+                    <button>🎭 Despedidas</button>
                 </div>
             </a>
 
             <!-- 🎪 Fiestas -->
-            <a href="mnt/html/event_fiestas.html">
+            <a href="assets/html/event_fiestas.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/fiestas.mp4" type="video/mp4">
                     </video>
-                    <p>🎪 Fiestas</p>
+                    <button>🎪 Fiestas</button>
                 </div>
             </a>
 
             <!-- 🍼 Gender Reveal -->
-            <a href="mnt/html/event_gender_reveal.html">
+            <a href="assets/html/event_gender_reveal.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/gender_reveal.mp4" type="video/mp4">
                     </video>
-                    <p>🍼 Gender Reveal</p>
+                    <button>🍼 Gender Reveal</button>
                 </div>
             </a>
 
             <!-- 🤠 Toro Mecánico -->
-            <a href="mnt/html/event_toro_mecanico.html">
+            <a href="assets/html/event_toro_mecanico.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/toro_mecanico.mp4" type="video/mp4">
                     </video>
-                    <p>🤠 Toro Mecánico</p>
+                    <button>🤠 Toro Mecánico</button>
                 </div>
             </a>
 
             <!-- 🏎️ Carreras Cars -->
-            <a href="mnt/html/event_cars.html">
+            <a href="assets/html/event_cars.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/cars1.mp4" type="video/mp4">
                     </video>
-                    <p>🏎️ Carreras Cars</p>
+                    <button>🏎️ Carreras Cars</button>
                 </div>
             </a>
 
             <!-- 💦 Eventos Acuáticos -->
-            <a href="mnt/html/event_agua.html">
+            <a href="assets/html/event_agua.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/castillo_agua1.mp4" type="video/mp4">
                     </video>
-                    <p>💦 Eventos Acuáticos</p>
+                    <button>💦 Eventos Acuáticos</button>
                 </div>
             </a>
 
             <!-- 🏖️ Piscinas -->
-            <a href="mnt/html/event_piscinas.html">
+            <a href="assets/html/event_piscinas.html">
                 <div class="pack">
                     <video autoplay muted loop playsinline class="pack-video">
                         <source src="assets/img/castillos/castillo_agua2.mp4" type="video/mp4">
                     </video>
-                    <p>🏖️ Piscinas y toboganes</p>
+                    <button>🏖️ Piscinas y toboganes</button>
                 </div>
             </a>
 
