--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blog - Yupifiestas</title>
-  <link rel="stylesheet" href="/assets/css/blog.css">
+  <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
 <body>
   <header class="header">
