--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -12,17 +12,14 @@
 
 <body>
   <header>
-    <div class="container-header">
-
-      <div class="logo-title">
-        <img src="../img/logos/logoyupi2.jpg" alt="Logo">
-        <h4>Yupifiestas</h4>
+    <div class="header-window">
+      <div class="container-header">
+        <div class="logo-title">
+          <img src="../img/logos/logoyupi.jpg" alt="Logo">
+          <h4>Yupifiestas</h4>
+          <label class="icon-menu" onclick="toggleMenu()">☰</label>
+        </div>
       </div>
-
-      <label class="icon-menu" onclick="toggleMenu()">
-        ☰ Menú
-      </label>
-
       <nav class="nav">
         <ul class="nav-links" id="nav-links">
           <li><a href="#">Inicio</a></li>
