--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                 <h4>Yupifiestas</h4>
             </div>
 
-            <label class="icon-menu" onclick="toggleMenu()">
-                ☰ Menú
-            </label>
+            <label class="icon-menu" onclick="toggleMenu()">☰</label>
 
             <nav class="nav">
                 <ul class="nav-links" id="nav-links">
