--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -23,10 +23,10 @@
       <nav class="nav">
         <ul class="nav-links" id="nav-links">
           <li><a href="#">Inicio</a></li>
-          <li><a href="#castillos">Castillos</a></li>
+          <li><a href="#../../../../index.html">Castillos</a></li>
           <li><a href="#packs">Packs</a></li>
           <li><a href="#contacto">Contacto</a></li>
-          <li><a href="assets/html/blog.html">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </nav>
     </div>
