--- a/assets/html/event.html
+++ b/assets/html/event.html
@@ -1,95 +1,211 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Todos los Eventos - Yupifiestas</title>
   <link rel="stylesheet" href="../css/event.css">
   <script src="../js/blog.js"></script>
 </head>
+
 <body>
 
-  <!-- Header -->
   <header>
-    <div class="container-header">
-      <div class="logo-title">
-        <img src="assets/img/logos/logoyupi.jpg" alt="Logo" />
-        <h4>Yupifiestas</h4>
+    <div class="header-window">
+      <div class="container-header">
+        <div class="logo-title">
+          <img src="../img/logos/logoyupi.jpg" alt="Logo">
+          <h4>Yupifiestas</h4>
+          <label class="icon-menu" onclick="toggleMenu()">☰</label>
+        </div>
       </div>
-      <label class="icon-menu">☰ Menú</label>
+      <nav class="nav">
+        <ul class="nav-links" id="nav-links">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#../../../../index.html">Castillos</a></li>
+          <li><a href="#packs">Packs</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="blog.html">Blog</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
-  <!-- Sección de Todos los Eventos -->
-  <section class="packs">
-    <h2>Todos Nuestros Eventos</h2>
-    <div class="packs-container">
-      <div class="pack">
-        <img src="assets/img/castillos/cumpleanos.jpg" alt="Cumpleaños" />
-        <p>🎉 Cumpleaños</p>
+  <section class="eventos-section">
+    <div class="evento">
+      <!-- Lado izquierdo: video -->
+      <div class="evento-media">
+        <video src="assets/videos/despedida-fiesta.mp4" controls class="evento-video"></video>
       </div>
-      <div class="pack">
-        <img src="assets/img/castillos/despedida.jpg" alt="Despedidas" />
-        <p>🎭 Despedidas</p>
+
+      <!-- Lado derecho: texto + galería -->
+      <div class="evento-info">
+        <h2>🎭 Despedidas de Soltero/a Inolvidables</h2>
+        <p>
+          Vive una experiencia única para celebrar tu despedida. En Yupifiestas organizamos eventos
+          divertidos y diferentes con castillos hinchables especiales para adultos, animación, música,
+          bebidas y sorpresas que no olvidarás.
+        </p>
+        <ul>
+          <li>🎉 Castillos hinchables XXL para adultos</li>
+          <li>🎧 DJ y animador en vivo</li>
+          <li>📸 Photocall con disfraces</li>
+          <li>🍹 Pack de bebidas y cócteles</li>
+          <li>🎁 Regalo sorpresa para el/la protagonista</li>
+        </ul>
+
+        <!-- Carrusel pequeño -->
+        <div class="evento-carrusel">
+          <h3>📸 Galería de Despedidas</h3>
+          <div class="carousel-pequeno">
+            <img src="../img/castillos/patrulla.jpg" alt="Despedida 1" class="zoomable">
+            <img src="../img/castillos/patrulla.jpg" alt="Despedida 2" class="zoomable">
+            <img src="../img/castillos/patrulla.jpg" alt="Despedida 3" class="zoomable">
+            <img src="../img/castillos/patrulla.jpg" alt="Despedida 3" class="zoomable">
+          </div>
+        </div>
+        <!-- Lightbox: visor grande -->
+        <div id="lightbox" class="lightbox hidden">
+          <span class="close-lightbox">&times;</span>
+          <img class="lightbox-img" src="" alt="Imagen ampliada" />
+        </div>
+        <a href="#reserva" class="btn-reservar">¡Reserva tu fiesta ahora!</a>
       </div>
-      <div class="pack">
-        <img src="assets/img/castillos/fiestas.jpg" alt="Fiestas" />
-        <p>🎪 Fiestas</p>
+      <div class="evento-media">
+        <video src="assets/videos/cumpleanos-fiesta.mp4" controls class="evento-video"></video>
       </div>
-      <div class="pack">
-        <img src="assets/img/castillos/gender_reveal.jpg" alt="Gender Reveal" />
-        <p>🍼 Gender Reveal</p>
+  
+      <div class="evento-info">
+        <h2>🎂 Fiestas de Cumpleaños Increíbles</h2>
+        <p>
+          Celebra un cumpleaños inolvidable con castillos hinchables, animación, y muchas sorpresas. 
+          ¡Perfecto para todas las edades!
+        </p>
+        <ul>
+          <li>🎈 Castillos adaptados para niños</li>
+          <li>🎤 Animadores y juegos dinámicos</li>
+          <li>🍭 Mesa dulce personalizada</li>
+          <li>🎁 Regalos para todos los peques</li>
+          <li>📸 Fotos divertidas con disfraces</li>
+        </ul>
+  
+        <div class="evento-carrusel">
+          <h3>📸 Galería de Cumpleaños</h3>
+          <div class="carousel-pequeno">
+            <img src="../img/castillos/cumple1.jpg" alt="Cumpleaños 1" class="zoomable">
+            <img src="../img/castillos/cumple2.jpg" alt="Cumpleaños 2" class="zoomable">
+            <img src="../img/castillos/cumple3.jpg" alt="Cumpleaños 3" class="zoomable">
+          </div>
+        </div>
+  
+        <div id="lightbox" class="lightbox hidden">
+          <span class="close-lightbox">&times;</span>
+          <img class="lightbox-img" src="" alt="Imagen ampliada" />
+        </div>
+  
+        <a href="#reserva" class="btn-reservar">¡Reserva tu fiesta ahora!</a>
       </div>
-      <div class="pack">
-        <img src="assets/img/castillos/toro_mecanico.jpg" alt="Toro Mecánico" />
-        <p>🤠 Toro Mecánico</p>
-      </div>
-      <div class="pack">
-        <img src="assets/img/castillos/cars1.jpg" alt="Carreras Cars" />
-        <p>🏎️ Carreras Cars</p>
-      </div>
-      <div class="pack">
-        <img src="assets/img/castillos/pintacaras.jpg" alt="Pintacaras" />
-        <p>🎨 Pintacaras</p>
-      </div>
-      <div class="pack">
-        <img src="assets/img/castillos/piscinas.jpg" alt="Piscinas y Toboganes" />
-        <p>🏖️ Piscinas y Toboganes</p>
+    </div>
+    
+  </section>
+
+
+  <!-- ======================== VIDEO PROMOCIONAL ======================== -->
+  <section class="promotionWrapper">
+    <video autoplay muted loop class="video-background">
+      <source src="../img/castillos/video_castillo1.mp4" type="video/mp4">
+      Tu navegador no soporta la reproducción de videos.
+    </video>
+    <div class="capa-gradient"></div>
+    <div class="container">
+      <div class="promotionInfo">
+        <h2>¿Necesitas más información?</h2>
+        <p>Consulta todos nuestros precios y ofertas exclusivas para eventos.</p>
+        <a href="#contacto" class="btn btn-primary">Reservanos</a>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer">
+  <footer id="contacto" class="footer">
     <div class="footer-container">
+
+      <!-- Información -->
       <div class="footer-info">
-        <h3>Yupifiestas</h3>
-        <p>Alquiler de castillos hinchables para cualquier tipo de evento.</p>
-        <p>📍 Ubicación: Ciudad, País</p>
+        <h3>🎉 Yupifiestas</h3>
+        <p>Alquiler de castillos hinchables para cualquier tipo de evento: cumpleaños, comuniones, despedidas y más.</p>
+        <p>📍 Ciudad, País</p>
         <p>📧 <a href="mailto:info@yupifiestas.es">info@yupifiestas.es</a></p>
         <p>📞 <a href="tel:+123456789">+12 345 6789</a></p>
       </div>
-      <div class="footer-social">
-        <h3>Síguenos</h3>
-        <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
-        <a href="#" class="social-icon"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="social-icon"><i class="fa fa-youtube"></i></a>
-      </div>
+
+      <!-- Menú -->
       <div class="footer-links">
-        <h3>Menú</h3>
+        <h3>Reservas</h3>
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Reservas</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#packs">Ver Packs Disponibles</a></li>
+          <li><a href="#castillos">Catálogo de Castillos</a></li>
+          <li><a href="#promociones">Ofertas y Promociones</a></li>
+          <li><a href="#contacto">Atención al Cliente</a></li>
         </ul>
       </div>
+
+      <!-- Redes sociales -->
+      <div class="footer-social">
+        <h3>Síguenos</h3>
+        <div class="sharing">
+          <!-- Facebook -->
+          <a href="#" class="sharing-item sharing-facebook" aria-label="Compartir en Facebook">
+            <svg class="i i-facebook" viewBox="0 0 24 24">
+              <path d="M17 14h-3v8h-4v-8H7v-4h3V7a5 5 0 0 1 5-5h3v4h-3q-1 0-1 1v3h4Z"></path>
+            </svg>
+          </a>
+
+          <!-- Twitter -->
+          <a href="#" class="sharing-item sharing-twitter" aria-label="Compartir en Twitter">
+            <svg class="i i-twitter" viewBox="0 0 24 24">
+              <path d="m3 21 7.5-7.5m3-3L21 3M8 3H3l13 18h5Z"></path>
+            </svg>
+          </a>
+
+          <!-- WhatsApp -->
+          <a href="#" class="sharing-item sharing-whatsapp" aria-label="Compartir en WhatsApp">
+            <svg class="i i-whatsapp" viewBox="0 0 24 24">
+              <circle cx="9" cy="9" r="1"></circle>
+              <circle cx="15" cy="15" r="1"></circle>
+              <path d="M8 9a7 7 0 0 0 7 7m-9 5.2A11 11 0 1 0 2.8 18L2 22Z"></path>
+            </svg>
+          </a>
+
+          <!-- Instagram -->
+          <a href="#" class="sharing-item sharing-instagram" aria-label="Compartir en Instagram">
+            <svg class="i i-instagram" viewBox="0 0 24 24">
+              <path
+                d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.66 0 3 1.34 3 3v10c0 1.66-1.34 3-3 3H7c-1.66 0-3-1.34-3-3V7c0-1.66 1.34-3 3-3h10zM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-2a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+            </svg>
+          </a>
+
+          <!-- Correo -->
+          <a href="#" class="sharing-item sharing-envelope" aria-label="Compartir por correo">
+            <svg class="i i-envelope" viewBox="0 0 24 24">
+              <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+              <path d="m22 8-10 5L2 8"></path>
+            </svg>
+          </a>
+        </div>
+
+      </div>
+
     </div>
+
+    <div class="waves"></div>
+
     <div class="footer-bottom">
-      &copy; 2025 Yupifiestas - Todos los derechos reservados
+      &copy; 2025 <strong>Yupifiestas</strong> · Todos los derechos reservados
     </div>
   </footer>
 
+
 </body>
+
 </html>
