--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -22,8 +22,8 @@
       </div>
       <nav class="nav">
         <ul class="nav-links" id="nav-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#../../../../index.html">Castillos</a></li>
+          <li><a href="../../index.html">Inicio</a></li>
+          <li><a href="#">Castillos</a></li>
           <li><a href="#packs">Packs</a></li>
           <li><a href="#contacto">Contacto</a></li>
           <li><a href="blog.html">Blog</a></li>
