--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -25,6 +25,7 @@
           <li><a href="../../index.html">Inicio</a></li>
           <li><a href="#">Castillos</a></li>
           <li><a href="#packs">Packs</a></li>
+          <li><a href="event.html">Eventos</a></li>
           <li><a href="#contacto">Contacto</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
