--- a/assets/html/event.html
+++ b/assets/html/event.html
@@ -22,9 +22,10 @@
       </div>
       <nav class="nav">
         <ul class="nav-links" id="nav-links">
-          <a href="../../index.html">Inicio</a>
-          <li><a href="">Castillos</a></li>
+          <li><a href="../../index.html">Inicio</a></li>
+          <li><a href="#">Castillos</a></li>
           <li><a href="#packs">Packs</a></li>
+          <li><a href="event.html">Eventos</a></li>
           <li><a href="#contacto">Contacto</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
