--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
           </div>
           <nav class="nav">
             <ul class="nav-links" id="nav-links">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#castillos">Castillos</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#">Castillos</a></li>
               <li><a href="#packs">Packs</a></li>
+              <li><a href="assets/html/event.html">Eventos</a></li>
               <li><a href="#contacto">Contacto</a></li>
               <li><a href="assets/html/blog.html">Blog</a></li>
             </ul>
