--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blog - Yupifiestas</title>
   <link rel="stylesheet" href="../css/blog.css">
-  <script src="../js/blog.js"></script>
-
+  <script src="../js/script.js"></script>
 </head>
 
 <body>
@@ -17,14 +16,14 @@
         <div class="logo-title">
           <img src="../img/logos/logoyupi.jpg" alt="Logo">
           <h4>Yupifiestas</h4>
-          <label class="icon-menu" onclick="toggleMenu()">☰</label>
+          <label class="icon-menu" id="menu-toggle">☰</label>
         </div>
       </div>
       <nav class="nav">
         <ul class="nav-links" id="nav-links">
           <li><a href="../../index.html">Inicio</a></li>
-          <li><a href="#">Castillos</a></li>
-          <li><a href="#packs">Packs</a></li>
+          <li><a href="../../index.html#castillos">Castillos</a></li>
+          <li><a href="../../index.html#packs">Packs</a></li>
           <li><a href="event.html">Eventos</a></li>
           <li><a href="#contacto">Contacto</a></li>
           <li><a href="blog.html">Blog</a></li>
