--- a/assets/html/packs.html
+++ b/assets/html/packs.html
@@ -31,16 +31,16 @@
             </nav>
         </div>
     </header>
-    <section class="eventos-section">
+    <section class="packs-section">
 
-        <div class="evento" id="pack-cumple">
+        <div class="pack" id="pack-cumple">
             <!-- Lado izquierdo: video del pack de cumpleaños -->
-            <div class="evento-media">
-                <video src="../videos/pack-cumple.mp4" controls class="evento-video"></video>
+            <div class="pack-media">
+                <video src="../videos/pack-cumple.mp4" controls class="pack-video"></video>
             </div>
 
             <!-- Lado derecho: información del pack -->
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>🎂 Pack Cumpleaños</h2>
                 <p>
                     Celebra un cumpleaños inolvidable con animadores, decoración personalizada, juegos y, por supuesto,
@@ -55,7 +55,7 @@
                 </ul>
 
                 <!-- Carrusel pequeño -->
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería de Cumpleaños</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/cumple1.jpg" alt="Cumpleaños 1" class="zoomable">
@@ -68,13 +68,13 @@
             </div>
         </div>
 
-        <div class="evento" id="pack-despedida">
+        <div class="pack" id="pack-despedida">
             <!-- Video del pack de despedidas -->
-            <div class="evento-media">
-                <video src="../videos/pack-despedida.mp4" controls class="evento-video"></video>
+            <div class="pack-media">
+                <video src="../videos/pack-despedida.mp4" controls class="pack-video"></video>
             </div>
 
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>🍻 Pack Despedidas</h2>
                 <p>
                     Organiza una despedida inolvidable con actividades únicas, música, animadores para adultos y un
@@ -88,7 +88,7 @@
                     <li>🎁 Regalo sorpresa</li>
                 </ul>
 
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería de Despedidas</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/despedida1.jpg" alt="Despedida 1" class="zoomable">
@@ -100,11 +100,11 @@
                 <a href="#reserva" class="btn-reservar">¡Reserva este pack!</a>
             </div>
         </div>
-        <div class="evento" id="pack-tematica">
-            <div class="evento-media">
-                <video src="../videos/pack-fiestas.mp4" controls class="evento-video"></video>
+        <div class="pack" id="pack-tematica">
+            <div class="pack-media">
+                <video src="../videos/pack-fiestas.mp4" controls class="pack-video"></video>
             </div>
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>🎊 Pack Fiestas Temáticas</h2>
                 <p>
                     Organiza una fiesta al estilo que prefieras: hawaiana, superhéroes, unicornios, lo que imagines.
@@ -117,7 +117,7 @@
                     <li>🍕 Menú especial</li>
                     <li>🎉 Castillo acorde al tema</li>
                 </ul>
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería de Fiestas</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/fiesta1.jpg" alt="Fiesta 1" class="zoomable">
@@ -128,11 +128,11 @@
                 <a href="#reserva" class="btn-reservar">¡Reserva este pack!</a>
             </div>
         </div>
-        <div class="evento" id="pack-gender">
-            <div class="evento-media">
-                <video src="../videos/pack-gender.mp4" controls class="evento-video"></video>
+        <div class="pack" id="pack-gender">
+            <div class="pack-media">
+                <video src="../videos/pack-gender.mp4" controls class="pack-video"></video>
             </div>
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>👶 Gender Reveal</h2>
                 <p>
                     Descubre el sexo del bebé de forma mágica y emotiva, rodeado de familia y amigos.
@@ -144,7 +144,7 @@
                     <li>📸 Reportaje fotográfico</li>
                     <li>🎁 Regalos para futuros papás</li>
                 </ul>
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería Gender Reveal</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/gender1.jpg" alt="Gender Reveal 1" class="zoomable">
@@ -155,11 +155,11 @@
                 <a href="#reserva" class="btn-reservar">¡Reserva este pack!</a>
             </div>
         </div>
-        <div class="evento" id="pack-toro">
-            <div class="evento-media">
-                <video src="../videos/pack-toro.mp4" controls class="evento-video"></video>
+        <div class="pack" id="pack-toro">
+            <div class="pack-media">
+                <video src="../videos/pack-toro.mp4" controls class="pack-video"></video>
             </div>
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>🐂 Pack Toro Mecánico</h2>
                 <p>
                     Reta a tus amigos y demuestra quién aguanta más tiempo. ¡Diversión asegurada con nuestro toro
@@ -172,7 +172,7 @@
                     <li>📸 Vídeos en cámara lenta</li>
                     <li>🍔 Zona de snacks</li>
                 </ul>
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería Toro Mecánico</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/toro1.jpg" alt="Toro 1" class="zoomable">
@@ -183,11 +183,11 @@
                 <a href="#reserva" class="btn-reservar">¡Reserva este pack!</a>
             </div>
         </div>
-        <div class="evento" id="pack-cars">
-            <div class="evento-media">
-                <video src="../videos/pack-cars.mp4" controls class="evento-video"></video>
+        <div class="pack" id="pack-cars">
+            <div class="pack-media">
+                <video src="../videos/pack-cars.mp4" controls class="pack-video"></video>
             </div>
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>🏁 Pack Carreras Cars</h2>
                 <p>
                     Ideal para los fans de los coches: inflables de carreras, decoración, música de motor y actividades
@@ -200,7 +200,7 @@
                     <li>🍿 Snacks tipo pit stop</li>
                     <li>📸 Zona de fotos con banderas</li>
                 </ul>
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería Carreras</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/cars1.jpg" alt="Carreras 1" class="zoomable">
@@ -211,11 +211,11 @@
                 <a href="#reserva" class="btn-reservar">¡Reserva este pack!</a>
             </div>
         </div>
-        <div class="evento" id="pack-acuaticos">
-            <div class="evento-media">
-                <video src="../videos/pack-acuaticos.mp4" controls class="evento-video"></video>
+        <div class="pack" id="pack-acuaticos">
+            <div class="pack-media">
+                <video src="../videos/pack-acuaticos.mp4" controls class="pack-video"></video>
             </div>
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>💦 Pack Eventos Acuáticos</h2>
                 <p>
                     Cuando llega el calor, nada como una fiesta con toboganes acuáticos, piscinas hinchables y juegos de
@@ -228,7 +228,7 @@
                     <li>💦 Guerra de globos</li>
                     <li>🎶 Música veraniega</li>
                 </ul>
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería Acuáticos</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/acuatico1.jpg" alt="Acuáticos 1" class="zoomable">
@@ -239,11 +239,11 @@
                 <a href="#reserva" class="btn-reservar">¡Reserva este pack!</a>
             </div>
         </div>
-        <div class="evento" id="pack-espuma">
-            <div class="evento-media">
-                <video src="../videos/pack-espuma.mp4" controls class="evento-video"></video>
+        <div class="pack" id="pack-espuma">
+            <div class="pack-media">
+                <video src="../videos/pack-espuma.mp4" controls class="pack-video"></video>
             </div>
-            <div class="evento-info">
+            <div class="pack-info">
                 <h2>🫧 Pack Fiesta de la Espuma</h2>
                 <p>
                     Llena el ambiente de burbujas, baile y diversión con nuestras máquinas de espuma. ¡Una experiencia
@@ -256,7 +256,7 @@
                     <li>🩳 Ropa personalizada</li>
                     <li>📷 Fotos y vídeos en cámara lenta</li>
                 </ul>
-                <div class="evento-carrusel">
+                <div class="pack-carrusel">
                     <h3>📸 Galería Fiesta de la Espuma</h3>
                     <div class="carousel-pequeno">
                         <img src="../img/packs/espuma1.jpg" alt="Espuma 1" class="zoomable">
