--- a/assets/html/event.html
+++ b/assets/html/event.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Todos los Eventos - Yupifiestas</title>
   <link rel="stylesheet" href="../css/event.css">
   <script src="../js/script.js"></script>
@@ -37,7 +37,7 @@
     <div class="evento">
       <!-- Lado izquierdo: video -->
       <div class="evento-media">
-        <video src="assets/videos/despedida-fiesta.mp4" controls class="evento-video"></video>
+        <video src="../img/castillos/castillo_fiesta.mp4" controls class="evento-video"></video>
       </div>
 
       <!-- Lado derecho: texto + galería -->
@@ -67,14 +67,11 @@
           </div>
         </div>
         <!-- Lightbox: visor grande -->
-        <div id="lightbox" class="lightbox hidden">
-          <span class="close-lightbox">&times;</span>
-          <img class="lightbox-img" src="" alt="Imagen ampliada" />
-        </div>
+        
         <a href="#reserva" class="btn-reservar">¡Reserva tu fiesta ahora!</a>
       </div>
       <div class="evento-media">
-        <video src="assets/videos/cumpleanos-fiesta.mp4" controls class="evento-video"></video>
+        <video src="../img/castillos/castillo_agua2.mp4" controls class="evento-video"></video>
       </div>
   
       <div class="evento-info">
@@ -100,10 +97,7 @@
           </div>
         </div>
   
-        <div id="lightbox" class="lightbox hidden">
-          <span class="close-lightbox">&times;</span>
-          <img class="lightbox-img" src="" alt="Imagen ampliada" />
-        </div>
+        
   
         <a href="#reserva" class="btn-reservar">¡Reserva tu fiesta ahora!</a>
       </div>
@@ -206,6 +200,12 @@
     </div>
   </footer>
 
+
+
+  <div id="lightbox" class="lightbox hidden">
+    <span class="close-lightbox">&times;</span>
+    <img class="lightbox-img" src="" alt="Imagen ampliada" />
+  </div>
 
 </body>
 
