--- a/assets/html/event.html
+++ b/assets/html/event.html
@@ -97,6 +97,10 @@
           </div>
         </div>
   
+        <div id="lightbox" class="lightbox hidden">
+          <span class="close-lightbox">&times;</span>
+          <img class="lightbox-img" src="" alt="Imagen ampliada" />
+        </div>
         
   
         <a href="#reserva" class="btn-reservar">¡Reserva tu fiesta ahora!</a>
