intento de solucion

--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -38,52 +38,56 @@
             </ul>
         </div>
 
-        <!-- Redes sociales -->
-        <!-- Redes sociales -->
-        <div class="footer-social">
-            <h3>Síguenos</h3>
-            <div class="sharing">
-
-                <!-- Facebook -->
-                <a href="#" class="sharing-item sharing-facebook" aria-label="Compartir en Facebook">
-                    <svg class="i i-facebook" viewBox="0 0 24 24">
-                        <path d="M17 14h-3v8h-4v-8H7v-4h3V7a5 5 0 0 1 5-5h3v4h-3q-1 0-1 1v3h4Z"></path>
-                    </svg>
-                </a>
-
-                <!-- Twitter (X) -->
-                <a href="#" class="sharing-item sharing-twitter" aria-label="Compartir en Twitter">
-                    <svg class="i i-twitter" viewBox="0 0 24 24">
-                        <path d="M8 19l11-14h-2.7L5.3 19H8zM4 5l6 8-6 8h2.3l6-8-6-8H4z" />
-                    </svg>
-                </a>
-
-                <!-- WhatsApp -->
-                <a href="#" class="sharing-item sharing-whatsapp" aria-label="Compartir en WhatsApp">
-                    <svg class="i i-whatsapp" viewBox="0 0 24 24">
-                        <path
-                            d="M20 4.08A9.9 9.9 0 0 0 12 2 10 10 0 0 0 3.5 17L2 22l5-1.5A10 10 0 0 0 22 12a9.9 9.9 0 0 0-2-7.92ZM12 20a8.3 8.3 0 0 1-4.2-1.1l-.3-.2-3 .9.9-3-.2-.3A8.5 8.5 0 1 1 12 20Zm4.8-6.1-2.1-.6c-.3-.1-.5-.2-.8.1l-.7.9c-1.3-.5-2.4-1.6-3-3l.9-.7c.3-.2.3-.5.2-.8l-.6-2c-.2-.4-.7-.6-1-.6h-.9c-.5 0-1 .5-1 1 0 3.1 2.5 5.6 5.6 5.6.5 0 1-.5 1-1v-.8c0-.4-.2-.9-.6-1Z" />
-                    </svg>
-                </a>
-
-                <!-- Instagram -->
-                <a href="#" class="sharing-item sharing-instagram" aria-label="Compartir en Instagram">
-                    <svg class="i i-instagram" viewBox="0 0 24 24">
-                        <path
-                            d="M12 2.2c3 0 3.3 0 4.5.1 1.2 0 2 .2 2.7.5a5.3 5.3 0 0 1 2 1.3c.5.6.9 1.3 1.2 2 .3.7.4 1.5.5 2.7 0 1.2.1 1.5.1 4.5s0 3.3-.1 4.5c0 1.2-.2 2-.5 2.7a5.3 5.3 0 0 1-1.3 2c-.6.5-1.3.9-2 1.2-.7.3-1.5.4-2.7.5-1.2 0-1.5.1-4.5.1s-3.3 0-4.5-.1c-1.2 0-2-.2-2.7-.5a5.3 5.3 0 0 1-2-1.3c-.5-.6-.9-1.3-1.2-2-.3-.7-.4-1.5-.5-2.7 0-1.2-.1-1.5-.1-4.5s0-3.3.1-4.5c0-1.2.2-2 .5-2.7a5.3 5.3 0 0 1 1.3-2c.6-.5 1.3-.9 2-1.2.7-.3 1.5-.4 2.7-.5 1.2 0 1.5-.1 4.5-.1m0-2.2c-3.1 0-3.5 0-4.7.1-1.2 0-2 .2-2.7.5-1 .4-1.9.9-2.7 1.7A7.6 7.6 0 0 0 1.3 4c-.3.7-.4 1.5-.5 2.7C.8 7.9.8 8.4.8 12s0 4.1.1 5.3c0 1.2.2 2 .5 2.7.4 1 .9 1.9 1.7 2.7a7.6 7.6 0 0 0 2.7 1.7c.7.3 1.5.4 2.7.5 1.2 0 1.6.1 4.7.1s3.5 0 4.7-.1c1.2 0 2-.2 2.7-.5 1-.4 1.9-.9 2.7-1.7a7.6 7.6 0 0 0 1.7-2.7c.3-.7.4-1.5.5-2.7 0-1.2.1-1.6.1-4.7s0-3.5-.1-4.7c0-1.2-.2-2-.5-2.7a7.6 7.6 0 0 0-1.7-2.7 7.6 7.6 0 0 0-2.7-1.7c-.7-.3-1.5-.4-2.7-.5C15.5 0 15.1 0 12 0Z" />
-                    </svg>
-                </a>
-
-                <!-- Correo -->
-                <a href="#" class="sharing-item sharing-envelope" aria-label="Compartir por correo">
-                    <svg class="i i-envelope" viewBox="0 0 24 24">
-                        <path d="M2 4h20v16H2z" fill="none" stroke="currentColor" stroke-width="2"></path>
-                        <path d="M22 4 12 13 2 4" fill="none" stroke="currentColor" stroke-width="2"></path>
-                    </svg>
-                </a>
-
-            </div>
-        </div>
+        <!-- Reemplaza la sección de redes sociales con esto: -->
+<div class="footer-social">
+    <h3>Síguenos</h3>
+    <div class="social-container">
+      <!-- Facebook -->
+      <a href="#" class="social-btn facebook" aria-label="Facebook">
+        <span class="icon">
+          <svg viewBox="0 0 24 24"><path d="M17 14h-3v8h-4v-8H7v-4h3V7a5 5 0 0 1 5-5h3v4h-3q-1 0-1 1v3h4Z"/></svg>
+        </span>
+        <span class="tooltip">Facebook</span>
+      </a>
+  
+      <!-- Twitter -->
+      <a href="#" class="social-btn twitter" aria-label="Twitter">
+        <span class="icon">
+          <svg viewBox="0 0 24 24"><path d="M8 19l11-14h-2.7L5.3 19H8zM4 5l6 8-6 8h2.3l6-8-6-8H4z"/></svg>
+        </span>
+        <span class="tooltip">Twitter</span>
+      </a>
+  
+      <!-- WhatsApp -->
+      <a href="#" class="social-btn whatsapp" aria-label="WhatsApp">
+        <span class="icon">
+          <svg viewBox="0 0 24 24"><path d="M8 9a7 7 0 0 0 7 7m-9 5.2A11 11 0 1 0 2.8 18L2 22Z"/></svg>
+        </span>
+        <span class="tooltip">WhatsApp</span>
+      </a>
+  
+      <!-- Instagram -->
+      <a href="#" class="social-btn instagram" aria-label="Instagram">
+        <span class="icon">
+          <svg viewBox="0 0 24 24">
+            <path d="M12 2.2c3 0 3.3 0 4.5.1 1.2 0 2 .2 2.7.5a5.3 5.3 0 0 1 2 1.3c.5.6.9 1.3 1.2 2 .3.7.4 1.5.5 2.7 0 1.2.1 1.5.1 4.5s0 3.3-.1 4.5c0 1.2-.2 2-.5 2.7a5.3 5.3 0 0 1-1.3 2c-.6.5-1.3.9-2 1.2-.7.3-1.5.4-2.7.5-1.2 0-1.5.1-4.5.1s-3.3 0-4.5-.1c-1.2 0-2-.2-2.7-.5a5.3 5.3 0 0 1-2-1.3c-.5-.6-.9-1.3-1.2-2-.3-.7-.4-1.5-.5-2.7 0-1.2-.1-1.5-.1-4.5s0-3.3.1-4.5c0-1.2.2-2 .5-2.7a5.3 5.3 0 0 1 1.3-2c.6-.5 1.3-.9 2-1.2.7-.3 1.5-.4 2.7-.5 1.2 0 1.5-.1 4.5-.1m0-2.2c-3.1 0-3.5 0-4.7.1-1.2 0-2 .2-2.7.5-1 .4-1.9.9-2.7 1.7A7.6 7.6 0 0 0 1.3 4c-.3.7-.4 1.5-.5 2.7C.8 7.9.8 8.4.8 12s0 4.1.1 5.3c0 1.2.2 2 .5 2.7.4 1 .9 1.9 1.7 2.7a7.6 7.6 0 0 0 2.7 1.7c.7.3 1.5.4 2.7.5 1.2 0 1.6.1 4.7.1s3.5 0 4.7-.1c1.2 0 2-.2 2.7-.5 1-.4 1.9-.9 2.7-1.7a7.6 7.6 0 0 0 1.7-2.7c.3-.7.4-1.5.5-2.7 0-1.2.1-1.6.1-4.7s0-3.5-.1-4.7c0-1.2-.2-2-.5-2.7a7.6 7.6 0 0 0-1.7-2.7 7.6 7.6 0 0 0-2.7-1.7c-.7-.3-1.5-.4-2.7-.5C15.5 0 15.1 0 12 0Z"/>
+          </svg>
+        </span>
+        <span class="tooltip">Instagram</span>
+      </a>
+  
+      <!-- Correo -->
+      <a href="mailto:info@yupifiestas.es" class="social-btn email" aria-label="Correo">
+        <span class="icon">
+          <svg viewBox="0 0 24 24">
+            <path d="M2 4h20v16H2z" fill="none" stroke="currentColor" stroke-width="2"/>
+            <path d="M22 4 12 13 2 4" fill="none" stroke="currentColor" stroke-width="2"/>
+          </svg>
+        </span>
+        <span class="tooltip">Correo</span>
+      </a>
+    </div>
+  </div>
 
 
     </div>
