--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -1,21 +1,20 @@
-<!-- assets/html/header.html -->
 <header>
   <div class="header-window">
     <div class="container-header">
       <div class="logo-title">
-        <img src="../img/logos/logoyupi.jpg" alt="Logo">
+        <img src="/assets/img/logos/logoyupi.jpg" alt="Logo">
         <h4>Yupifiestas</h4>
         <label class="icon-menu" id="menu-toggle">☰</label>
       </div>
     </div>
     <nav class="nav">
       <ul class="nav-links" id="nav-links">
-        <li><a href="../../index.html">Inicio</a></li>
-        <li><a href="../../index.html#castillos">Castillos</a></li>
-        <li><a href="../../index.html#packs">Packs</a></li>
-        <li><a href="event.html">Eventos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="/index.html#castillos">Castillos</a></li>
+        <li><a href="/index.html#packs">Packs</a></li>
+        <li><a href="/assets/html/event.html">Eventos</a></li>
+        <li><a href="/index.html#contacto">Contacto</a></li>
+        <li><a href="/assets/html/blog.html">Blog</a></li>
       </ul>
     </nav>
   </div>
